<resources>
    <string name="app_name">避難所検索＠伊勢</string>

    <string-array name="shelter_type" >
        <item>津波緊急避難所</item>
        <item>指定避難所</item>
    </string-array>

    <string name="search">最寄りの避難所を検索</string>
    <string name="legend">凡例</string>
    <string name="usage">使い方</string>
    <string name="check_update">更新を確認</string>
    <string name="goto_supportsite">サポートサイトへ</string>
    <string name="about">このアプリについて</string>

    <string name="legend_current">現在位置</string>
    <string name="legend_red">最も近い避難所</string>
    <string name="legend_yellow">２番目および３番目に近い避難所</string>
    <string name="legend_green">選択した種類の避難所</string>
    <string name="legend_gray">その他の避難所</string>

    <string name="usage_abstract">伊勢市内の避難所を検索するシンプルなアプリです。\n アプリを起動すると現在位置を取得後、最寄りの避難所を検索して表示します。インターネットに接続できない状態でも動作します（オフライン地図表示）。</string>
    <string name="usage_howtouse">・ 画面上部で検索対象の避難所種類を選択できます。\n・ 避難所をタップすると詳しい情報が表示されます。\n・ 避難所を長押しすると現在位置からその避難所までの道順を表示します。\n・ 現在位置が移動しても最寄りの避難所までの経路は自動で再計算しません。\n・ 現在位置ボタンを押すと避難所までの経路を再計算します。</string>

    <string name="about_privacy_policy">本アプリのプライバシーポリシーは &lt;a href="https://www.mori-soft.com/escape/privacypolicy/"&gt;こちら&lt;/a&gt;をご覧ください。</string>
    <string name="about_license_me">本アプリは &lt;a href="http://www.apache.org/licenses/LICENSE-2.0.txt"&gt;Apach License 2.0 のライセンス&lt;/a&gt;にて公開しています。</string>
    <string name="about_project">プロジェクトサイト &lt;a href="https://github.com/junichim/ShelterAtIse"&gt;https://github.com/junichim/ShelterAtIse&lt;/a&gt;</string>
    <string name="about_caution">※ 本アプリは伊勢市の公式アプリではありません。</string>
    <string name="about_license_opensorce">このアプリでは以下のオープンソースライブラリを利用しています。</string>
    <string name="about_license_mapsforge">&lt;a href="https://github.com/mapsforge/mapsforge"&gt;Mapsforge&lt;/a&gt;, &lt;a href="http://www.gnu.org/licenses/lgpl-3.0.html"&gt;LGPL v3&lt;/a&gt;</string>
    <string name="about_license_graphhopper">&lt;a href="https://github.com/graphhopper/graphhopper"&gt;GraphHopper&lt;/a&gt;, &lt;a href="http://www.apache.org/licenses/LICENSE-2.0.txt"&gt;Apache 2.0 License&lt;/a&gt;</string>
    <string name="about_license_opendata">このアプリでは以下のオープンデータを利用しています。</string>
    <string name="about_license_shelter">このアプリで利用している避難所データは、以下の著作物を改変して利用しています。&lt;br&gt; 『災害時指定避難場所』、伊勢市、&lt;a href="http://creativecommons.org/licenses/by/2.1/jp/"&gt;クリエイティブ・コモンズ・ライセンス表示2.1日本&lt;/a&gt;</string>
    <string name="about_license_osm">&lt;a href="https://www.openstreetmap.org/"&gt;OpenStreetMap&lt;/a&gt;, &lt;a href="https://opendatacommons.org/licenses/odbl/"&gt;Open Data Commons OpenDatabase License&lt;/a&gt;</string>
    <string name="about_license_icon">このアプリでは避難所位置を表すマーカーとして&lt;a href="https://sozai.cman.jp/"&gt;https://sozai.cman.jp/&lt;/a&gt;の画像を使用しています。</string>
    <string name="about_license_fukidashi">このアプリでは吹き出し画像として&lt;a href="http://fukidesign.com/"&gt;http://fukidesign.com/&lt;/a&gt;の画像を加工して使用しています。</string>

    <string name="dialog_info_need_storage_permission_title">ストレージへの書き込み権限が必要</string>
    <string name="dialog_info_need_storage_permission_abstract">オフライン地図の表示および経路検索処理で、ストレージへの書き込みを行うため、書き込み権限が必要です。</string>
    <string name="dialog_info_need_storage_permission_detail">ストレージへの書き込み権限がない場合、オフライン地図を表示することができません。\nなお、あとから、スマートフォンの設定画面にて権限を変更可能です。</string>

    <string name="dialog_info_need_location_permission_title">位置情報取得の権限が必要</string>
    <string name="dialog_info_need_location_permission_abstract">現在位置の表示および最寄りの避難所までの経路検索を行うため、現在位置情報を取得する権限が必要です。</string>
    <string name="dialog_info_need_location_permission_detail">現在位置情報取得の権限がない場合、現在位置から最寄りの避難所までの経路を検索することができません。\nなお、あとから、スマートフォンの設定画面にて権限を変更可能です。</string>

</resources>
