<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/about_map_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="マップデータ："
            android:textSize="18sp" />

        <TextView
            android:id="@+id/about_shelter_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="避難所データ："
            android:textSize="18sp" />

        <TextView
            android:text="@string/about_privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/about_privacy_policy" />

        <TextView
            android:text="@string/about_license_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/about_license_me" />

        <TextView
            android:text="@string/about_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_project"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:text="@string/about_caution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:text="@string/about_license_opensorce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

        <TextView
            android:text="@string/about_license_mapsforge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_license_mapsforge"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:text="@string/about_license_graphhopper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_license_graphhopper"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:text="@string/about_license_opendata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <TextView
            android:text="@string/about_license_shelter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_license_shelter"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:text="@string/about_license_osm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_license_osm"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:text="@string/about_license_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_license_icon"
            android:layout_marginTop="10dp" />

        <TextView
            android:text="@string/about_license_fukidashi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_license_fukidashi"
            android:layout_marginTop="10dp" />
    </LinearLayout>
</ScrollView>
